[package]
name = "struct-merge-macro"
description = "Proc macro crate for merge-struct."
version = "0.1.0"
authors = ["Arne Beer <contact@arne.beer>"]
homepage = "https://github.com/nukesor/struct-merge"
repository = "https://github.com/nukesor/struct-merge"
documentation = "https://docs.rs/struct-merge/"
license = "MIT"
keywords = ["library", "merge", "struct", "macro"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version="1", features=["full"] }
quote = "1"
proc-macro2 = "1"
proc-macro-error = "1"
